I added the submission part and make it functionable

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,20 +9,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SeriousMode" >
+
+        <activity
+            android:name="Activity.SubmitReportActivity"
+            android:exported="false"
+            android:label="Submit Report"
+            android:theme="@style/Theme.SeriousMode" />
+
         <activity
             android:name="Activity.NextActivity"
             android:exported="false"
             android:label="@string/title_activity_next"
-            android:theme="@style/Theme.SeriousMode" /> <!-- MainActivity: LAUNCHER and entry point -->
+            android:theme="@style/Theme.SeriousMode" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
