added some update status to allow the user to have an update on their submitted report

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,12 @@
             android:theme="@style/Theme.SeriousMode" />
 
         <activity
+            android:name="Activity.ReportDetailActivity"
+            android:exported="false"
+            android:label="Report Details"
+            android:theme="@style/Theme.SeriousMode" />
+
+        <activity
             android:name=".MainActivity"
             android:exported="true" >
             <intent-filter>
